[package]
name = "public-mdbooks"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
git-digger = "0.2.2"
log = "0.4.27"
mdbook = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
toml = "1.0.3"
